draft container images

--- a/.env_template
+++ b/.env_template
@@ -3,3 +3,9 @@ COMPOSE_FILE=docker/default.yml
 
 # local development
 COMPOSE_FILE=docker/default.yml:docker/local.yml
+
+# build images locally
+COMPOSE_FILE=docker/default.yml:docker/local_build.yml
+
+# build images locally and run for local development
+COMPOSE_FILE=docker/default.yml:docker/local_build.yml:docker/local.yml
